<resources>
    <!--<string name="app_name">TouchDown</string>-->
    <string name="actionbar_name">TOUCHDOWN - ROYAL RUGBY</string>
    <string name="live">LIVE</string>
    <string name="topic">HALF TIME</string>
    <string name="dummy_score">28</string>
    <string name="default_live_match_time">00:00</string>
    <string name="image_description" />
    <string name="updated_on">Updated on :</string>
    <string name="player_name_default">Player Name</string>
    <string name="position_name_default">Position</string>
    <string name="default_player_pos">18</string>

    <string name="google_calendar_api_key">959794019019-cnga03kchd5e95iln7d6mfebtmlqk907.apps.googleusercontent.com</string>
    <string name="facebook_api_key">1130455344173167</string>

    <string name="score">Score</string>
    <string name="time_12_05">Time - 12:05</string>
    <string name="score_details">Score details</string>
    <string name="player_name">Player Name</string>
    <string name="team_name">Team Name</string>
    <string name="menu_title">Menu</string>
    <string name="menu_live_title">LIVE</string>
    <string name="close">Close</string>
    <string name="app_support">App Support</string>
    <string name="more_apps">More Apps</string>
    <string name="rate">Rate this App</string>
    <string name="copyrights">© 2017 Royal College Group of 2007</string>
    <string name="app_version">TouchDown</string>
    <string name="about_us_desc">Touch Down is an application which is launched in order for all the Royalists to get updates on Royal Rugby.
        This is a project of Royal College Group of 2007</string>
    <string name="live_update_from">Live Score Update</string>
    <string name="x">X</string>
    <string name="ovin_askey">Ovin Askey Some Other</string>
    <string name="title_activity_match_summary">Match Details</string>
    <string name="vs">VS</string>
    <string name="powered_by">Powered By</string>
    <string name="group_of_2007">Bradby Express</string>

    <!-- Match Summary Details-->
    <string name="penalty_title">PENALTIES</string>
    <string name="score_title">SCORES</string>
    <string name="scoreres_title">SCORERES</string>
    <string name="penalized_title">PENALIZED</string>

    <!-- menu items -->
    <string name="about_us">About Us</string>
    <string name="sync_now">Sync Now</string>
    <string name="share_app">Share App</string>
    <string name="profile">Profile</string>
    <string name="invite">Invite Friends</string>
    <string name="tries">Tries</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="no_items_available">No Items available</string>
    <string name="school_rugby_league_2017">SCHOOL RUGBY LEAGUE 2017</string>
    <string name="_1st_round_matches">1ST ROUND MATCHES</string>
    <string name="dummy_time">22:30</string>
    <string name="official">Official Points</string>
    <string name="unofficial">Unofficial Points</string>
    <string name="notification_messages">Messages</string>
    <string name="notification_live">Live Link</string>
    <string name="notification_score">Scores</string>
    <string name="add_comment">Add comment...</string>

</resources>
