<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_alert_score_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/score"
        android:textSize="22sp"
        android:background="@color/background_blue"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_alert_score_title"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_alert_score_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/time_12_05"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_alert_score_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/team_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_alert_score_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/player_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_alert_score_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/score_details"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_alert_score_player"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/default_profile_pic"
                android:scaleType="centerCrop"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>