<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_player_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="40dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:paddingBottom="2dp">

        <RelativeLayout
            android:id="@+id/layout_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp">

            <RelativeLayout
                android:id="@+id/player_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/layout_no"
                android:layout_toRightOf="@+id/layout_no">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txt_player_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:gravity="center_horizontal"
                    android:text="@string/ovin_askey"
                    android:textColor="@android:color/black"
                    android:textSize="26sp"
                    android:maxLines="2"
                    app:autoSizeTextType="uniform"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_player_name"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_player_age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/position_name_default"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/txt_player_height"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/position_name_default"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_player_colors"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/position_name_default"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/txt_player_weight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="end"
                            android:text="@string/position_name_default"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/player_details"
                android:background="@color/background_blue">

                <TextView
                    android:id="@+id/txt_player_no"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/dummy_score"
                    android:textColor="@color/tab_background"
                    android:textSize="70sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:id="@+id/img_player_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_info"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_profile_pic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/img_player_pic"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#88000000">

            <LinearLayout
                android:id="@+id/layout_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/score_try" />

                    <TextView
                        android:id="@+id/txt_tries_stat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/dummy_score"
                        android:textColor="@color/tab_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/score_drop_goal" />

                    <TextView
                        android:id="@+id/txt_drop_stat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/dummy_score"
                        android:textColor="@color/tab_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/score_conversion" />

                    <TextView
                        android:id="@+id/txt_conversions_stat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/dummy_score"
                        android:textColor="@color/tab_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/score_penalty" />

                    <TextView
                        android:id="@+id/txt_penalty_stat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/dummy_score"
                        android:textColor="@color/tab_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/yellow_card" />

                    <TextView
                        android:id="@+id/txt_yellow_stat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/dummy_score"
                        android:textColor="@color/tab_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/red_card" />

                    <TextView
                        android:id="@+id/txt_red_stat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/dummy_score"
                        android:textColor="@color/tab_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_player_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/ovin_askey"
                android:textColor="@color/tab_background"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>